@@ -120,9 +120,11 @@ pce_ifhostproperty(prolog(sicstus), [
 ]).
 
 :- noprofile((send_implementation/3,
-	     (get_implementation/4),
-	     send/2,
-	     get/3)).
+	      get_implementation/4,
+	      send_class/3,
+	      get_class/4,
+	      send/2,
+	      get/3)).
 
 
 		/********************************
